--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts-ts-antd": "2.17.0"
+    "react-scripts-ts-antd": "2.17.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts-ts-antd start",
