--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "antd": "^3.20.3",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
     "history": "^4.9.0",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
