--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tomato",
   "version": "0.1.0",
-  "homepage": "https://QIMengz.github.io/tomato",
+  "homepage": "https://808Mak1r.github.io/tomato",
   "private": true,
   "dependencies": {
     "antd": "^3.20.3",
